Исправлены юнит тесты, переделана allure разметка